--- a/ziu/app.json
+++ b/ziu/app.json
@@ -1,7 +1,7 @@
 {
   "expo": {
-    "name": "my_project",
-    "slug": "my_project",
+    "name": "ziu",
+    "slug": "ziu",
     "version": "1.0.0",
     "orientation": "portrait",
     "icon": "./assets/icon.png",
